--- a/.github/workflows/terraform-plan-apply.yml
+++ b/.github/workflows/terraform-plan-apply.yml
@@ -52,6 +52,7 @@ jobs:
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
+    needs: [terraform-plan]
 
     steps:
       # Checkout the repository to the GitHub Actions runner
