--- a/.github/workflows/terraform-plan-apply.yml
+++ b/.github/workflows/terraform-plan-apply.yml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: tfplan
-        path: tfplan.out
+        path: tfplan
 
   terraform-apply:
     name: Terraform Apply
